fixed about page overflow

--- a/src/Components/Merger.scss
+++ b/src/Components/Merger.scss
@@ -189,7 +189,7 @@
     }
     .right,
     .left {
-      opacity: 0;
+     display: none;
     }
     .important {
       flex-direction: column;
@@ -254,8 +254,8 @@
 @media screen and (max-width: "520px") {
   .about {
     padding: 0;
-    width: 100vw;
-    overflow-x: hidden;
+    // width: 100vw;
+    // overflow-x: hidden;
     header {
       margin-bottom: 0px;
       border-radius: 0px;
